# pointmod

./: .gitignore  CMakeLists.txt  README.md  build-and-run.sh  build-windows.bat  imgui.ini
.codex/environments/: environment.toml
.github/workflows/: release-windows.yml
lander/: index.html  package.json
lander/src/: App.jsx  ChevronRight.jsx  index.css
lander/src/dither/: index.jsx
lander/src/reveal/: reveal.css  reveal.jsx
src/: Application.cpp  Application.hpp  AsyncPointCloudLoader.cpp  AsyncPointCloudLoader.hpp  CocoaMenu.cpp  CocoaMenu.hpp  CocoaMenu.mm  FileDialog.cpp  FileDialog.hpp  FileDialog.mm  Math.hpp  OpenGL.cpp  OpenGL.hpp  OrbitCamera.cpp  OrbitCamera.hpp  PerformanceTracker.cpp  PerformanceTracker.hpp  PlyAsciiLoader.cpp  PlyAsciiLoader.hpp  PointCloud.cpp  PointCloud.hpp  PointCloudRenderer.cpp  PointCloudRenderer.hpp  main.cpp
